crates/tests/libs/bindgen/data/error/link_abi_not_supported/input.rdl

#[win32]
mod Test {
    #[library("a.dll")]
    extern "invalid" fn F();
}
        